[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"
default-run = "dec06"

[[bin]]
name = "dec06"
path = "src/dec06.rs"

[[bin]]
name = "dec05"
path = "src/dec05.rs"

[[bin]]
name = "dec04"
path = "src/dec04.rs"

[[bin]]
name = "dec03"
path = "src/dec03.rs"

[[bin]]
name = "dec02"
path = "src/dec02.rs"


[dependencies]
itertools = "0.13.0"
rayon = "1.10.0"
regex = "1.11.1"
tokio = "1.42.0"
