cargo-features = ["edition2024"]

[package]
name = "aoc23"
version = "0.1.0"
edition = "2024"
default-run = "dec08"

[[bin]]
name = "dec08"
path = "src/dec08.rs"

[[bin]]
name = "dec06"
path = "src/dec06.rs"

[[bin]]
name = "dec05"
path = "src/dec05.rs"

[[bin]]
name = "dec04"
path = "src/dec04.rs"

[[bin]]
name = "dec03"
path = "src/dec03.rs"

[[bin]]
name = "dec02"
path = "src/dec02.rs"


[dependencies]
either = "1.13.0"
itertools = "0.13.0"
num = "0.4.3"
rayon = "1.10.0"
regex = "1.11.1"
tokio = "1.42.0"
