[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"
default-run = "dec09"

[[bin]]
path = "src/dec09.rs"
name = "dec09"

[[bin]]
path = "src/dec08.rs"
name = "dec08"

[[bin]]
name = "dec05"
path = "src/dec05.rs"

[[bin]]
name = "dec04"
path = "src/dec04.rs"

[[bin]]
name = "dec03"
path = "src/dec03.rs"

[[bin]]
name = "dec02"
path = "src/dec02.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.13.0"
itertools = "0.13.0"
num = "0.4.3"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["cookies"] }
tokio = { version = "1.42.0", features = ["full"] }
